# hyperstreamdb

./: .buildinfo  .gitattributes  .gitignore  .instructions.md  CNAME  Cargo.toml  DORIS_OPTIMIZATION_PATTERNS.md  LICENSE-MIT  README.md  RUN_COMPLIANCE_TESTS.sh  STEERING.md  THIRDPARTY_NOTICES.md  Untitled.ipynb  book.toml  broken_binaries_all.txt  broken_bins.txt  build-connectors.sh  build.rs  build_out.txt  check_iceberg_compliance.py  clippy_output.txt  compliance_output.txt  critical_code_review.md  debug_log.txt  demo_basics_run.txt  demo_basics_v2.txt  docker-compose-minio-nessie.yml  docker-compose.yml  fix_cache.patch  fix_nb.py  fix_schema.patch  genindex.html  index.html  objects.inv  pyproject.toml  python_test_output.txt  python_test_output_v2.txt  python_test_output_v3.txt  roadmap.html  rust_check_all_warnings.txt  (+24 more)
.doctrees/: environment.pickle  index.doctree  roadmap.doctree
.doctrees/api/: python.doctree  rust.doctree
.doctrees/guides/: BENCHMARKING.doctree  ICEBERG_V2_V3_API.doctree  PGVECTOR_SQL_GUIDE.doctree  VECTOR_CONFIGURATION.doctree  api_reference.doctree  architecture.doctree  catalog_usage.doctree  comprehensive_guide.doctree  concurrency.doctree  configuration.doctree  gpu_setup_guide.doctree  index.doctree  installation.doctree  python_vector_api.doctree
.github/workflows/: docs.yml  release.yml
.hypothesis/constants/: 32b327793848e7d8  67b0a8ccf18bf5d2  84828557b4ee7be4
_sources/: index.rst.txt
_sources/guides/: BENCHMARKING.md.txt  PGVECTOR_SQL_GUIDE.md.txt  VECTOR_CONFIGURATION.md.txt  architecture.md.txt  catalog_usage.md.txt  configuration.md.txt
api/: python.html  rust.html
benches/: bench_table.rs  performance.rs
benchmark_results/: BENCHMARK_REPORT.md  benchmark_results.csv  concurrent_queries_20260409_214245.json  concurrent_queries_20260409_214245.md  filtered_search_comparison_20260409_222607.json  filtered_search_comparison_20260409_222607.md  filtered_vector_search_20260409_214355.json  filtered_vector_search_20260409_214355.md  filtered_vector_search_20260409_220418.json  filtered_vector_search_20260409_220418.md  filtered_vector_search_20260409_222053.json  filtered_vector_search_20260409_222053.md  filtered_vector_search_20260409_225907.json  filtered_vector_search_20260409_225907.md  full_scan_baseline_20260409_222303.json  full_scan_baseline_20260409_222303.md  high_selectivity_filter_20260409_222302.json  high_selectivity_filter_20260409_222302.md  ingestion_comparison_20260409_222516.json  ingestion_comparison_20260409_222516.md  multi_filter_vector_20260409_214428.json  multi_filter_vector_20260409_214428.md  multi_filter_vector_20260409_220450.json  multi_filter_vector_20260409_220450.md  multi_filter_vector_20260409_222131.json  multi_filter_vector_20260409_222131.md  multi_filter_vector_20260409_225938.json  multi_filter_vector_20260409_225938.md  multi_filter_vector_20260409_231713.json  multi_filter_vector_20260409_231713.md  post_vs_pre_filter_20260409_214501.json  post_vs_pre_filter_20260409_214501.md  post_vs_pre_filter_20260409_220524.json  post_vs_pre_filter_20260409_220524.md  post_vs_pre_filter_20260409_222204.json  post_vs_pre_filter_20260409_222204.md  post_vs_pre_filter_20260409_230010.json  post_vs_pre_filter_20260409_230010.md  query_comparison_20260409_222541.json  query_comparison_20260409_222541.md  (+6 more)
benchmarks/: profile_ingest.py
benchmarks/competitive/: benchmark_suite.py  requirements.txt  run_benchmarks.sh
demo/: 01_basics.py  01_installation_and_basics.ipynb  02_rag_pipeline.ipynb  02_rag_pipeline.py  03_comprehensive_guide.ipynb  comprehensive_guide.ipynb  rag_hf_demo.py  requirements.txt  run_demos.py  verify_explain.py
demo/.ipynb_checkpoints/: 01_installation_and_basics-checkpoint.ipynb  03_comprehensive_guide-checkpoint.ipynb  comprehensive_guide-checkpoint.ipynb
docs/: BENCHMARKING.md  COMPREHENSIVE_GUIDE.md  CONCURRENCY.md  GPU_SETUP_GUIDE.md  ICEBERG_V2_V3_API.md  INSTALLATION.md  PYTHON_VECTOR_API.md  VECTOR_CONFIGURATION.md  api_reference.md  architecture.md  catalog_usage.md  index.md  requirements.txt
docs/integrations/: README.md  java_jni.md  python.md  spark.md  trino.md
docs/source/: conf.py  (+2 more)
examples/: catalog_usage.rs  pgvector_python_examples.py  pgvector_sql_examples.sql  python_distance_api_examples.py  vector_index_types.py
guides/: BENCHMARKING.html  ICEBERG_V2_V3_API.html  PGVECTOR_SQL_GUIDE.html  VECTOR_CONFIGURATION.html  api_reference.html  architecture.html  catalog_usage.html  comprehensive_guide.html  concurrency.html  configuration.html  gpu_setup_guide.html  index.html  installation.html  python_vector_api.html
hyperstreamdb-enterprise/: Cargo.toml
hyperstreamdb-enterprise/src/: lib.rs  turboquant.rs
rust/: crates.js  help.html  settings.html  src-files.js
scratch/: check_os_error.rs
spark-hyperstream/: pom.xml
src/: index.rs.old  lib.rs  python_binding.rs  python_distance.rs  python_gpu_context.rs
tests/: all_types_index_test.rs  check_mmh3.py  datafusion_rust_test.rs  debug_murmur3.rs  fuzz_murmur3.rs  generate_iceberg_manifests.rs  integration_test_hnsw_ivf_native.rs  prototype_merge.py  schema_evolution_test.rs  stability.rs  test_advanced_sql.rs  test_arrow_schema_consistency.rs  test_binary_vector_properties.py  test_bloom_cache.rs  test_bloom_pruning.rs  test_catalog_factory.py  test_concurrency_robust.rs  test_connector_apis.py  test_connector_ffi.rs  test_connector_integration.py  test_context_backend_property.py  test_core_ingestion.rs  test_cross_engine_compat.py  test_data_types.rs  test_default_config.py  test_distance_properties.py  test_docstrings.py  test_durability_robust.rs  test_gpu_kernel_availability_property.proptest-regressions  test_gpu_kernel_availability_property.rs  test_gpu_kmeans.py  test_hamming_distance_kernel.rs  test_hardware_parity.rs  test_hybrid_search.py  test_hyperstream_cuda.py  test_hyperstream_intel.py  test_hyperstream_mps.py  test_hyperstream_rocm.py  test_iceberg_python.py  test_index_lifecycle.rs  (+48 more)
trino-config/: config.properties  entrypoint.sh  jvm.config
trino-hyperstream/: pom.xml
(+1710 files in other folders)
