[package]
name = "hyperstreamdb"
version = "0.1.0"
edition = "2021"
license = "MIT AND Apache-2.0"
description = "HyperStreamDB - Serverless Index-Streaming Database with Overlay Indexing and Vector Search"
repository = "https://github.com/rla3rd/hyperstreamdb"
homepage = "https://github.com/rla3rd/hyperstreamdb"
readme = "README.md"
keywords = ["database", "vector-search", "iceberg", "parquet", "indexing"]
categories = ["database-implementations", "data-structures", "concurrency"]
exclude = [
    ".venv",
    "venv",
    "target",
    ".git",
    ".github",
    "*.db",
    "test_*",
    "rag_db",
    "news_db",
    "demo",
    "docker",
    "benchmarks",
    "examples"
]

[lib]
name = "hyperstreamdb"
crate-type = ["cdylib", "rlib"]

[[test]]
name = "test_connector_ffi"
required-features = ["java"]

[features]
default = ["intel_gpu", "candle"]
candle = []
cuda = ["dep:cust", "intel_gpu"]
rocm = ["dep:opencl3", "intel_gpu"] # Fallback to OpenCL for now
mps = ["metal"]
intel_gpu = ["dep:opencl3"]
enterprise = []
python = ["dep:pyo3", "pyo3/extension-module", "dep:numpy", "dep:pythonize"]
java = ["dep:jni"]

[dependencies]
# core columnar memory format
arrow = { version = "57.2.0", features = ["ffi", "pyarrow"] }
lazy_static = "1.4"
arrow-array = "57.2.0"
arrow-schema = "57.2.0"
arrow-json = "57.2.0"
# serialization
parquet = { version = "57.2.0", features = ["async", "object_store"] }
bytes = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
apache-avro = "0.17"

# async runtime
tokio = { version = "1.36", features = ["full"] }
futures = "0.3"
reqwest = { version = "0.11", default-features = false, features = ["json", "blocking", "rustls-tls"] }

# rest api (user requested)
axum = "0.7"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace"] }

# s3 / storage abstraction
object_store = { version = "0.12.4", features = ["aws", "azure", "gcp", "http"] }

# AWS SDK for Glue Catalog
aws-config = { version = "1.0", features = ["behavior-version-latest"] }
aws-sdk-glue = "1.0"

# Thrift for Hive Metastore
volo-thrift = "0.10"
pilota = "0.11"

# Hardware Acceleration
cust = { version = "0.3", optional = true } # CUDA
opencl3 = { version = "0.9", optional = true } # Intel / OpenCL

# indexing
roaring = "0.10.2" # For scalar bitmaps
hnsw_rs = { version = "0.1.19", path = "vendor/hnsw_rs" } # For vector indexing
# lance removed due to missing protoc

# error handling
thiserror = "1.0"
anyhow = "1.0"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
uuid = { version = "1.10", features = ["v4", "fast-rng", "macro-diagnostics"] }
chrono = "0.4"
rayon = "1.8"
moka = { version = "0.12", features = ["future"] }
once_cell = "1.19"
async-trait = "0.1.89"
datafusion = "52.0.0"
datafusion-expr-common = "52.0.0"
datafusion-functions-aggregate-common = "52.0.0"
async-stream = "0.3.6"
smartcore = "0.3"  # For k-means clustering (IVF index)
rand = "0.8"  # For k-means initialization
hyperloglogplus = "0.4"  # For NDV (distinct count) estimation
clap = { version = "4.5.54", features = ["derive"] }
rustyline = "17.0.2"
hive_metastore = "0.2.0"
faststr = "0.2.32"
ahash = "0.8.12"
dirs = "5.0"
prometheus = "0.13"
opentelemetry = { version = "0.22" }
opentelemetry-otlp = { version = "0.15", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio"] }
tracing-opentelemetry = "0.23"
base64 = "0.22.1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "postgres", "mysql", "chrono", "uuid", "any"] }
murmur3 = "0.5.2"
regex = "1.10"
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
tokenizers = "0.21"
sha2 = "0.10"

[target.'cfg(target_os = "macos")'.dependencies]
metal = { version = "0.27.0", optional = true } # MPS

[target.'cfg(target_os = "linux")'.dependencies]
# rocm-smi = { version = "0.4.0", optional = true } # ROCm monitoring
# Note: rocm-rs is not on crates.io, we will use git or a local path if needed.
# For now, we will use opencl3 as a fallback/stub for ROCm or assume system libraries.
# If rocm-rs is required, we can add:
# rocm-rs = { git = "https://github.com/RadeonOpenCompute/rocm-rs", optional = true } 

[dependencies.jni]
version = "0.21"
optional = true
features = ["invocation"]

[dependencies.pyo3]
version = "0.26.0"
optional = true
features = ["extension-module"]

[dependencies.numpy]
version = "0.26.0"
optional = true

[dependencies.pythonize]
version = "0.26.0"
optional = true

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
rand = "0.8"
rand_distr = "0.4"
hnsw_rs = { version = "0.1.19", path = "vendor/hnsw_rs" }
tempfile = "3.10"
proptest = "1.4"

[[bin]]
name = "generate_iceberg_manifests"
path = "tests/bin/generate_iceberg_manifests.rs"

[[bin]]
name = "verify_iceberg_read_check"
path = "tests/bin/verify_iceberg_read_check.rs"

[[bench]]
name = "performance"
harness = false

[[bench]]
name = "bench_table"
harness = false

[patch.crates-io]
hnsw_rs = { path = "vendor/hnsw_rs" }
