[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "hyperstreamdb"
version = "0.1.0"
description = "HyperStreamDB - Serverless Index-Streaming Database with Overlay Indexing"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
authors = [
    { name = "HyperStream Team" }
]
keywords = ["database", "vector", "search", "indexing", "parquet", "iceberg"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Database",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "pyarrow>=14.0.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "maturin>=1.7",
]
mps = []
cuda = []
rocm = []

[project.urls]
Homepage = "https://github.com/rla3rd/hyperstreamdb"
Repository = "https://github.com/rla3rd/hyperstreamdb"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "hyperstreamdb"
python-source = "python"
# Build both the Rust library and Python bindings
bindings = "pyo3"
