[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "hyperstreamdb"
version = "0.1.10"
description = "HyperStreamDB - Serverless Index-Streaming Database with Overlay Indexing"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT AND Apache-2.0" }
authors = [
    { name = "HyperStream Team" }
]
keywords = ["database", "vector", "search", "indexing", "parquet", "iceberg"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Database",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "pyarrow>=14.0.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "maturin>=1.7",
]
# Hardware acceleration extras
mps = []   # Apple Silicon (Metal)
cuda = []  # NVIDIA (CUDA)
rocm = []  # AMD (via OpenCL/ROCm)
intel_gpu = [] # Intel (OpenCL)
intel_cpu = [] # Intel (SIMD/AVX2)
all_gpu = ["mps", "cuda", "rocm", "intel_gpu"]
src = ["maturin>=1.7"]

[project.urls]
Homepage = "https://github.com/rla3rd/hyperstreamdb"
Repository = "https://github.com/rla3rd/hyperstreamdb"

[tool.maturin]
features = ["python"]
# Map Python extras to Rust features
extra-features = { mps = ["mps"], cuda = ["cuda"], rocm = ["rocm"], intel_gpu = ["intel_gpu"], intel_cpu = ["intel_cpu"] }
module-name = "hyperstreamdb.hyperstreamdb"
python-source = "python"
# Build both the Rust library and Python bindings (multi-version compatible)
bindings = "pyo3-abi3"
sdist-include = ["LICENSE*", "README.md", "THIRDPARTY_NOTICES.md", "vendor/**/*", "tests/**/*", "benches/**/*"]
# Optimizations for WHEEL builds
strip = false
# Use sccache if available during build
sccache = false
