[package]
name = "hyperstreamdb-enterprise"
version = "0.1.0"
edition = "2021"
description = "HyperStreamDB - Enterprise Edition Extensions (TurboQuant, GPU-fused kernels)"
license = "Proprietary"

[dependencies]
# Depend on the community core via relative path for the workspace/monorepo transition
hyperstreamdb = { path = ".." }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
rayon = "1.8"

# Hardware Acceleration
simdeez = "1.0.8"

[features]
default = ["avx512"]
avx512 = []
cuda = ["hyperstreamdb/cuda"]
